crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__array_first_generic-3.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Failable function must be handled with a failure handler or marked with `trust` modifier",
            113..124,
        ),
    ],
}
