crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__array_index_set-2.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "arr: [Int]",
    "arr: [Int]",
]
