crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__array_index_set-3.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [],
}
